--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-
   "scripts": {
-    "dev": "tsx src/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.7",
+    "prisma": "^4.5.0",
+    "prisma-erd-generator": "^1.2.2",
     "tsx": "^3.11.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@fastify/cors": "^8.1.1",
+    "@prisma/client": "^4.5.0",
     "@rocketseat/eslint-config": "^1.1.3",
     "eslint": "^8.26.0",
     "fastify": "^4.9.2"
